# prestashop-python

./: README.md  pyproject.toml  setup.py
prestashop/: client.py
