[tool.poetry]
name = "prestashop-python"
version = "0.1.4"
description = "API wrapper for Prestashop written in Python"
authors = ["Juan Carlos Rios <juankrios15@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "prestashop"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

